--- a/.env
+++ b/.env
@@ -20,7 +20,8 @@ DATABASE_NAME=HelHal
 
 
 # Google OAuth Configuration
-
+GOOGLE_CALLBACK_URL=http://localhost:8081/api/v1/auth/google/callback
+GOOGLE_CLIENT_ID=375252936136-an78m91vfh40jim4h3c8thl2osvk58v6.apps.googleusercontent.com
 GOOGLE_CALLBACK_URL=http://localhost:8081/api/v1/auth/google/callback
 # Apple OAuth Configuration
 APPLE_CLIENT_ID=com.helhal.devapp
