--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
-
 {
-  "name": "project-name",
+  "name": "helhal",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "vercel-build": "npm run build",
     "seed": "ts-node -r tsconfig-paths/register src/seeder.run.ts",
-		"build": "nest build",
-    "start": "node dist/src/main.js",
-    "vercel-build": "nest build",
+    "build": "nest build ",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
     "nodemon": "nodemon --ext json,yaml --exec npm run start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -61,6 +60,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
     "rimraf": "^6.0.1",
+    "serverless-http": "^4.0.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.5"
   },
