--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 src/firebase/venuat-6f346-firebase-adminsdk-fbsvc-b2ce39bdcd.json
 .vercel
+.env*.local
