--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ JWT_REFRESH_EXPIRE_NUMBER= 30
 EMAIL_USER = "ahmedabdelrhman083@gmail.com"
 EMAIL_PASS = "joef jjeb mmgt gkns"
 
+PROJECT_NAME = 'Helhal'
 
 DATABASE_HOST=aws-0-eu-central-1.pooler.supabase.com
 DATABASE_PORT=5432
@@ -21,8 +22,8 @@ DATABASE_NAME=HelHal
 
 # Google OAuth Configuration
 GOOGLE_CALLBACK_URL=http://localhost:8081/api/v1/auth/google/callback
-GOOGLE_CLIENT_ID=375252936136-an78m91vfh40jim4h3c8thl2osvk58v6.apps.googleusercontent.com
-GOOGLE_CALLBACK_URL=http://localhost:8081/api/v1/auth/google/callback
+GOOGLE_CLIENT_ID=75600615090-kkc6e79h9co760gi63pa3iotmri1ag8u.apps.googleusercontent.com 
+GOOGLE_CLIENT_SECRET=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
 # Apple OAuth Configuration
 APPLE_CLIENT_ID=com.helhal.devapp
 APPLE_TEAM_ID=N76H9T9F64
