--- a/.env
+++ b/.env
@@ -35,6 +35,6 @@ APPLE_REDIRECT_URI=https://d830-197-160-165-245.ngrok-free.app/api/auth/apple/ca
 
 # Client Configuration
 FRONTEND_URL=https://helhal.com
-BACKEND_URL=https://helhal.com
+BACKEND_URL=https://api.helhal.com
 
 portt=3023
