Update loading env files

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "scripts": {
     "seed": "ts-node -r tsconfig-paths/register src/seeder.run.ts",
     "build": "nest build",
-    "start": "node dist/src/main.js",
+    "start": "set NODE_ENV=production&&node dist/src/main.js",
     "postinstall": "npm run build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "nodemon": "nodemon --ext json,yaml --exec npm run start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "set NODE_ENV=development&&nest start --watch",
+    "start:debug": "set NODE_ENV=development&&nest start --debug --watch",
+    "start:prod": "set NODE_ENV=production&&node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
