Add varify identity

--- a/.env
+++ b/.env
@@ -37,4 +37,7 @@ SMS_API_USER=helhalOTPC
 SMS_API_PASSWORD=dvs1245sff
 SMS_API_KEY=dJOeBJo8oEWDZeJp
 
+NAFATH_APP_ID=ixdbyuhl
+NAFATH_APP_KEY=8c416d9775254bbe911cdf22c416ea5d
+
 portt=3023
