--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm",
-    "migration:generate": "npm run typeorm migration:generate -- -n",
-    "migration:run": "npm run typeorm migration:run",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate src/migration/newMigration  -d src/data-source.ts",
+    "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
     "migration:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
@@ -54,7 +54,8 @@
     "exceljs": "^4.4.0",
     "glob": "^11.0.3",
     "inflight": "^1.0.6",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
+    "jwks-rsa": "^3.2.1",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.5.0",
     "nodemailer": "^6.9.16",
@@ -74,6 +75,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
