--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Client Configuration
 FRONTEND_URL=https://www.helhal.com
-BACKEND_URL=https://binaural-taryn-unprecipitatively.ngrok-free.dev
+BACKEND_URL=https://api.helhal.com
